Switch to new icon workflow

--- a/src/html/pages/components/dropdown.hbs
+++ b/src/html/pages/components/dropdown.hbs
@@ -27,7 +27,7 @@ category: Components
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Form Autocomplete"}}
+  {{#embed "styleguide/article" title="Form Autocomplete" background="#222"}}
   {{#content "body"}}
     {{> includes/dropdown-form}}
   {{/content}}
