--- a/src/html/pages/components/logo.hbs
+++ b/src/html/pages/components/logo.hbs
@@ -14,14 +14,14 @@ category: Components
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Header" description="Light logo for the dark header." body-class="dark"}}
+  {{#embed "styleguide/article" title="Header" description="Light logo for the dark header." background="#222"}}
   {{#content "body"}}
     {{> includes/logo-header}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Kapp-Hamburg" description="The very special branding logo with a hover twist." body-class="dark"}}
+  {{#embed "styleguide/article" title="Kapp-Hamburg" description="The very special branding logo with a hover twist." background="#222"}}
   {{#content "body"}}
     {{> includes/logo-kapp-hamburg}}
   {{/content}}
