--- a/src/html/partials/includes/dropdown-text.hbs
+++ b/src/html/partials/includes/dropdown-text.hbs
@@ -1,7 +1,7 @@
 <div class="c-dropdown js-dropdown">
   <button class="c-button c-dropdown__button js-toggle-button">
     Dropdown
-    <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown"/></svg>
+    <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown-icon"/></svg>
   </button>
 
   <div class="c-dropdown__panel c-dropdown__panel--menu js-toggle-panel">
@@ -20,7 +20,7 @@
 <div class="c-dropdown js-dropdown">
   <button class="c-button c-dropdown__button js-toggle-button">
     Dropdown
-    <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown"/></svg>
+    <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown-icon"/></svg>
   </button>
 
   <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu js-toggle-panel">
