--- a/src/html/partials/includes/header-default.hbs
+++ b/src/html/partials/includes/header-default.hbs
@@ -12,9 +12,9 @@
   <div class="c-action-bar__group">
     <div class="c-dropdown js-dropdown">
       <button class="c-button c-button--icon c-dropdown__button js-toggle-button">
-        <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#account"/></svg>
+        <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#account-icon"/></svg>
         <span class="c-button__text u-sr-only">Dropdown</span>
-        <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown"/></svg>
+        <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown-icon"/></svg>
       </button>
 
       <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu js-toggle-panel">
@@ -32,7 +32,7 @@
 
   <div class="c-action-bar__group">
     <button class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#power"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#power-icon"/></svg>
       <span class="c-button__text u-sr-only">Log off</span>
     </button>
   </div>
