--- a/src/html/partials/includes/nav-sidebar.hbs
+++ b/src/html/partials/includes/nav-sidebar.hbs
@@ -2,7 +2,7 @@
   <ul class="c-nav-sidebar__list">
     <li class="c-nav-sidebar__item">
       <a href="#" class="c-nav-sidebar__link c-nav-sidebar__link--muted">
-        <svg class="c-nav-sidebar__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#arrow-back"/></svg>
+        <svg class="c-nav-sidebar__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#arrow-back-icon"/></svg>
         Domain List
       </a>
     </li>
