--- a/src/html/pages/components/forms.hbs
+++ b/src/html/pages/components/forms.hbs
@@ -6,7 +6,7 @@ category: Components
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
-  {{#embed "styleguide/article" title="Text Inputs" body-class="light"}}
+  {{#embed "styleguide/article" title="Text Inputs" background="#ddd"}}
   {{#content "body"}}
     <label for="text">Text input</label>
     <input type="text" id="text" placeholder="Text">
@@ -46,7 +46,7 @@ category: Components
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Text Inputs (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Text Inputs (dark)" background="#222"}}
   {{#content "body"}}
     <label for="text" class="c-label--dark">Text input</label>
     <input type="text" id="text" placeholder="Text" class="c-input--dark">
@@ -82,7 +82,7 @@ category: Components
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Textarea" body-class="light"}}
+  {{#embed "styleguide/article" title="Textarea" background="#ddd"}}
   {{#content "body"}}
     <label for="textarea">Textarea</label>
     <textarea id="textarea" placeholder="Textarea" rows="5"></textarea>
@@ -103,7 +103,7 @@ category: Components
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Textarea (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Textarea (dark)" background="#222"}}
   {{#content "body"}}
     <label for="textarea" class="c-label--dark">Textarea</label>
     <textarea id="textarea" placeholder="Textarea" rows="5" class="c-input--dark"></textarea>
@@ -124,7 +124,7 @@ category: Components
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Select" body-class="light"}}
+  {{#embed "styleguide/article" title="Select" background="#ddd"}}
   {{#content "body"}}
     <label for="select-1" class="u-sr-only">Select input</label>
     <select id="select-1">
@@ -153,7 +153,7 @@ category: Components
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Select (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Select (dark)" background="#222"}}
   {{#content "body"}}
     <label for="select-4" class="u-sr-only">Select input</label>
     <select id="select-4" class="c-input--dark">
@@ -190,17 +190,17 @@ category: Components
     <input type="radio" name="radio-1" value="radio-1-2" id="radio-1-2">
     <label for="radio-1-2">Radio</label>
 
-    <input type="radio" name="radio-1" value="radio-1-2" id="radio-1-2" class="has-error">
-    <label for="radio-1-2">Radio (error)</label>
+    <input type="radio" name="radio-1" value="radio-1-3" id="radio-1-3" class="has-error">
+    <label for="radio-1-3">Radio (error)</label>
 
-    <input type="radio" name="radio-1" value="radio-1-3" id="radio-1-3" disabled>
-    <label for="radio-1-3">Radio (disabled)</label>
+    <input type="radio" name="radio-1" value="radio-1-4" id="radio-1-4" disabled>
+    <label for="radio-1-4">Radio (disabled)</label>
 
-    <input type="radio" name="radio-1" value="radio-41-" id="radio-1-4">
-    <label for="radio-1-4">Radio</label>
+    <input type="radio" name="radio-1" value="radio-4-5" id="radio-1-5">
+    <label for="radio-1-5">Radio</label>
 
-    <input type="radio" name="radio-1add" value="radio" id="radio-1add" disabled checked>
-    <label for="radio-1add">Radio (checked, disabled)</label>
+    <input type="radio" name="radio-1dis" value="radio" id="radio-1dis" disabled checked>
+    <label for="radio-1dis">Radio (checked, disabled)</label>
   {{/content}}
   {{/embed}}
 
@@ -213,37 +213,37 @@ category: Components
     <input type="checkbox" name="checkbox-1" value="checkbox-1-2" id="checkbox-1-2">
     <label for="checkbox-1-2">Checkbox</label>
 
-    <input type="checkbox" name="checkbox-1" value="checkbox-1-2" id="checkbox-1-2" class="has-error">
-    <label for="checkbox-1-2">Checkbox (error)</label>
+    <input type="checkbox" name="checkbox-1" value="checkbox-1-3" id="checkbox-1-3" class="has-error">
+    <label for="checkbox-1-3">Checkbox (error)</label>
 
-    <input type="checkbox" name="checkbox-1" value="checkbox-1-3" id="checkbox-1-3" disabled>
-    <label for="checkbox-1-3">Checkbox (disabled)</label>
+    <input type="checkbox" name="checkbox-1" value="checkbox-1-4" id="checkbox-1-4" disabled>
+    <label for="checkbox-1-4">Checkbox (disabled)</label>
 
-    <input type="checkbox" name="checkbox-1" value="checkbox-1-4" id="checkbox-1-4">
-    <label for="checkbox-1-4">Checkbox</label>
+    <input type="checkbox" name="checkbox-1" value="checkbox-1-5" id="checkbox-1-5">
+    <label for="checkbox-1-5">Checkbox</label>
 
-    <input type="checkbox" name="checkbox-1" value="checkbox-1-5" id="checkbox-1-5" disabled checked>
-    <label for="checkbox-1-5">Checkbox (checked, disabled)</label>
+    <input type="checkbox" name="checkbox-1" value="checkbox-1dis" id="checkbox-1dis" disabled checked>
+    <label for="checkbox-1dis">Checkbox (checked, disabled)</label>
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Radio (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Radio (dark)" background="#222"}}
   {{#content "body"}}
-    <input type="radio" name="radio-2" value="radio-1" id="radio-2-1" class="c-input--dark" checked>
+    <input type="radio" name="radio-2" value="radio-2-1" id="radio-2-1" class="c-input--dark" checked>
     <label for="radio-2-1">Radio</label>
 
-    <input type="radio" name="radio-2" value="radio-2" id="radio-2-2" class="c-input--dark">
+    <input type="radio" name="radio-2" value="radio-2-2" id="radio-2-2" class="c-input--dark">
     <label for="radio-2-2">Radio</label>
 
-    <input type="radio" name="radio-2" value="radio-2" id="radio-2-2" class="c-input--dark has-error">
-    <label for="radio-2-2">Radio (error)</label>
+    <input type="radio" name="radio-2" value="radio-2-3" id="radio-2-3" class="c-input--dark has-error">
+    <label for="radio-2-3">Radio (error)</label>
 
-    <input type="radio" name="radio-2" value="radio-3" id="radio-2-3" class="c-input--dark" disabled>
-    <label for="radio-2-3">Radio (disabled)</label>
+    <input type="radio" name="radio-2" value="radio-2-4" id="radio-2-4" class="c-input--dark" disabled>
+    <label for="radio-2-4">Radio (disabled)</label>
 
-    <input type="radio" name="radio-2" value="radio-4" id="radio-2-4" class="c-input--dark">
-    <label for="radio-2-4">Radio</label>
+    <input type="radio" name="radio-2" value="radio-2-5" id="radio-2-5" class="c-input--dark">
+    <label for="radio-2-5">Radio</label>
 
     <input type="radio" name="radio-2add" value="radio" id="radio-2add" class="c-input--dark" disabled checked>
     <label for="radio-2add">Radio (checked, disabled)</label>
@@ -251,7 +251,7 @@ category: Components
   {{/embed}}
 
 
-  {{#embed "styleguide/article" title="Checkbox (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Checkbox (dark)" background="#222"}}
   {{#content "body"}}
     <input type="checkbox" name="checkbox-2" value="checkbox-2-1" id="checkbox-2-1" class="c-input--dark" checked>
     <label for="checkbox-2-1">Checkbox (checked)</label>
@@ -259,17 +259,17 @@ category: Components
     <input type="checkbox" name="checkbox-2" value="checkbox-2-2" id="checkbox-2-2" class="c-input--dark">
     <label for="checkbox-2-2">Checkbox</label>
 
-    <input type="checkbox" name="checkbox-2" value="checkbox-2-2" id="checkbox-2-2" class="c-input--dark has-error">
-    <label for="checkbox-2-2">Checkbox (error)</label>
+    <input type="checkbox" name="checkbox-2" value="checkbox-2-3" id="checkbox-2-3" class="c-input--dark has-error">
+    <label for="checkbox-2-3">Checkbox (error)</label>
 
-    <input type="checkbox" name="checkbox-2" value="checkbox-2-3" id="checkbox-2-3" class="c-input--dark" disabled>
-    <label for="checkbox-2-3">Checkbox (disabled)</label>
+    <input type="checkbox" name="checkbox-2" value="checkbox-2-5" id="checkbox-2-4" class="c-input--dark" disabled>
+    <label for="checkbox-2-4">Checkbox (disabled)</label>
 
-    <input type="checkbox" name="checkbox-2" value="checkbox-2-4" id="checkbox-2-4" class="c-input--dark">
-    <label for="checkbox-2-4">Checkbox</label>
+    <input type="checkbox" name="checkbox-2" value="checkbox-2-5" id="checkbox-2-5" class="c-input--dark">
+    <label for="checkbox-2-5">Checkbox</label>
 
-    <input type="checkbox" name="checkbox-2" value="checkbox-2-5" id="checkbox-2-5" class="c-input--dark" disabled checked>
-    <label for="checkbox-2-5">Checkbox (checked, disabled)</label>
+    <input type="checkbox" name="checkbox-2" value="checkbox-2dis" id="checkbox-2dis" class="c-input--dark" disabled checked>
+    <label for="checkbox-2dis">Checkbox (checked, disabled)</label>
   {{/content}}
   {{/embed}}
 
