--- a/src/html/partials/includes/list-alias.hbs
+++ b/src/html/partials/includes/list-alias.hbs
@@ -4,14 +4,14 @@
       <h3 class="c-list__title c-list__title--multiline">
         <span>webmaster@awesome-pictures.com</span>
         <span>
-          <svg class="c-list__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
+          <svg class="c-list__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group-icon"/></svg>
           info@awesome-pictures.com
         </span>
       </h3>
     </a>
 
     <button class="c-icon-button c-icon-button--active-rotate c-list__toggle-button js-toggle-button">
-      <svg class="c-icon-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown"/></svg>
+      <svg class="c-icon-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown-icon"/></svg>
       <span class="u-sr-only">Show Actions</span>
     </button>
   </div>
@@ -24,12 +24,12 @@
 
     <div class="c-list__action-group">
       <button class="c-button c-button--icon">
-        <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#settings"/></svg>
+        <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#settings-icon"/></svg>
         <span class="c-button__text u-sr-only-md">Settings</span>
       </button>
 
       <button class="c-button c-button--icon">
-        <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#delete"/></svg>
+        <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#delete-icon"/></svg>
         <span class="c-button__text u-sr-only-md">Delete</span>
       </button>
     </div>
