--- a/src/html/partials/includes/nav-horizontal-title.hbs
+++ b/src/html/partials/includes/nav-horizontal-title.hbs
@@ -1,7 +1,7 @@
 <div class="c-action-bar">
   <div class="c-action-bar__group u-hide-lg u-hide-xl">
     <button class="c-icon-button js-sidebar-button">
-      <svg class="c-icon-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#menu"/></svg>
+      <svg class="c-icon-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#menu-icon"/></svg>
       <span class="u-sr-only">Open Menu</span>
     </button>
   </div>
@@ -12,7 +12,7 @@
 
   <div class="c-action-bar__group">
     <button class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#save"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#save-icon"/></svg>
       <span class="c-button__text  u-sr-only-below-md">Save</span>
     </button>
   </div>
